--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@ h4 {
 }
 
 .indifferent {
-  box-shadow:  -1px 1px #dddd22, -2px 2px #dddd22, -3px 3px #dddd22, -4px 4px #dddd22, -5px 5px #dddd22;
-  background-color: #b0b01c;
+  box-shadow:  -1px 1px #b0b01c, -2px 2px #b0b01c, -3px 3px #b0b01c, -4px 4px #b0b01c, -5px 5px #b0b01c;
+  background-color: #dddd22;
 }
 
 .dubious {
