--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ h4 {
 }
 
 .dubious {
-  box-shadow:  -1px 1px #dd4444, -2px 2px #dd4444, -3px 3px #dd4444, -4px 4px #dd4444, -5px 5px #dd4444;
+  box-shadow:  -1px 1px #d72828, -2px 2px #d72828, -3px 3px #d72828, -4px 4px #d72828, -5px 5px #d72828;
   background-color: #dd4444;
 }
 
