--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,13 @@ h4 {
 }
 
 .indifferent {
+  border: 1px solid #b0b01c;
   box-shadow:  -1px 1px #b0b01c, -2px 2px #b0b01c, -3px 3px #b0b01c, -4px 4px #b0b01c, -5px 5px #b0b01c;
   background-color: #dddd22;
 }
 
 .dubious {
+  border: 1px solid #d72828;
   box-shadow:  -1px 1px #d72828, -2px 2px #d72828, -3px 3px #d72828, -4px 4px #d72828, -5px 5px #d72828;
   background-color: #dd4444;
 }
