--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ h4 {
   border: 1px solid #b0b01c;
   box-shadow:  -1px 1px #b0b01c, -2px 2px #b0b01c, -3px 3px #b0b01c, -4px 4px #b0b01c, -5px 5px #b0b01c;
   background-color: #dddd22;
-  background: linear-gradient(to right, #009900, #b0b01c);
+  background: linear-gradient(to right, #009900, #dddd22);
 }
 
 .dubious {
